style.css
body {
  background-color: black;
  font-family: arial;
}

.header {
  background-color: white;
  position: fixed;
  width: 100%;
  height: 60px;
  top: -1px;
  left: -1px;
}

#header_title_style {
  font-family: arial;
  color: black;
  float: left;
  margin-top: 14px;
  padding-left: 10px;
}

.header_button {
  float: right;
  color: black;
  background-color: white;
  font-weight: bold;
  border: none;
  height: 60px;
  width: 100px;
  font-size: 15px;
  line-height: 17px;
  vertical-align: middle;
}

.header_button:hover {
  cursor: pointer;
  transition: background-color 0.25s;
  background-color: gray;
}

#top_section {
  background-color: gray;
  color: white;
  width: 100%;
  top: -1px;
  left: -1px;
}

#sub_header {
  margin-top: -20px;
}

